--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "angular": "^1.7.5",
     "angular-route": "^1.7.5",
+    "grunt-contrib-jshint": "^2.0.0",
     "moment": "^2.22.2"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
-    "grunt-cli": "^1.3.2"
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^4.0.0"
   }
 }
