--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.0"
   }
 }
